# learn_3d_computer_graphics_programming

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  cmake-.bat  cmake-build.bat
src/: array.h  camera.c  camera.h  clipping.c  clipping.h  display.c  display.h  geometry_cube.c  geometry_cube.h  light.c  light.h  main.c  matrix.c  matrix.h  mesh.c  mesh.h  swap.c  swap.h  texture.c  texture.h  texture_redbrick.c  texture_redbrick.h  triangle.c  triangle.h  vector.c  vector.h
